--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="container">
         <form id="form-element">
             <input type="text" id="password" readonly>
+            <button type="button" id="copy">copy password</button>
             <label>
                 <h2>Generated Password</h2>
                <button type="submit" id="password-btn"> Generate password</button>
